[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pytket-circuit-builder-api"
version = "0.1.0"
description = ""
authors = ["Travis Thompson <travis.thompson@quantinuum.com>"]
readme = "README.md"

[poetry.vi]

[tool.poetry.dependencies]
python = "^3.11"
pytket = "^1.25"

[tool.poetry.group.tests.dependencies]
pytest = "^7.2.1"

[tool.poetry.group.linting.dependencies]
ruff = "^0.0.247"
black = "^23.1.0"
darglint = "^1.8.1"

[tool.poetry.group.type-checking.dependencies]
mypy = "^1.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.0.0"
sphinx-autodoc-typehints = "^1.22"
sphinx-click = "^4.4.0"
furo = "^2022.12.7"
myst-parser = "^0.18.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pytket_circuit_builder_api"]

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["F", "E", "W", "C90", "I", "N", "D", "UP", "YTT", "ANN",
    "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM",
    "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PT", "Q", "RET",
    "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL",
    "TRY", "RSE", "SLF", "RUF"]
ignore = ["E501", "D211", "D212", "TCH001", "TCH002", "ANN101", "ANN102", "D100"]
unfixable = ["T201"]
# Assume Python 3.11.
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F403", "D104"]
"tests/*" = ["S101"]
"docs/conf.py" = ["A001", "INP001"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
